--- a/index.html
+++ b/index.html
@@ -134,66 +134,53 @@
                             <h1 class="display-4">Part 1</h1>
                         </div> -->
                         <div class="section-title position-relative mb-6" style="margin-top:5%">
-                            <h1>Images</h1>
+                            <h1>Review</h1>
                         </div>
-                        <!-- <img class="img-fluid rounded w-100 mb-4" src="img/header.jpg" alt="Image"> -->                        
-                        <p>We use the <code>&lt;img&gt;</code> tag to show images on web pages. It looks like this:<br/>
-                            <iframe src="https://pastebin.com/embed_iframe/WU9YxFgU?theme=dark" style="border:none;width:100%;height:15vh;"></iframe>
-                            It's an <strong>empty element</strong> meaning that it has no end tag (<code>&lt;/img&gt;</code>)
+                        <h2>Part 1</h2>
+                        <p>Open up the HTML editor at <a href="https://onecompiler.com/html/3yv2mczfq">onecompiler.com/html/3yv2mczfq</a>You'll see some HTML Code already present.
+                            Work with this code. To see the output, click on the red run button in the upper right corner.<br/>
+                            <img src="img/run-button.png" width="10%" height="10%"><br/>
+                            <br/> 
+                            Replace the text you see with what it's asking for. For example, where it says <strong>Put Your Heading Here: A name for the image you select</strong>, replace <br/>
+                            <code>&lt;p&gt;Put Your Heading Here: A name for the image you select&lt;/p&gt;</code> <br/> with <br/> <code>&lt;h1&gt;A Ball&lt;/h1&gt;</code> <br/> If you choose to use an image of a ball<br/>
+                            **Remember, for images, retrieve the src by doing the following:<br/><br/>
+                            Set <code>src</code> equal to another image link. Go to google images, find an image, 
+                            right click on it, and select <strong>copy image address</strong>. Then, paste that where it says src. Dont forget the quotation marks!<br/><br/>
+                            <img src="img/img-address.png" width="50%" height="50%"><br/><br/>
                         </p>
-                        <h2>Before We Begin</h2>
-                        <p>Open up the HTML editor <a href="https://www.programiz.com/html/online-compiler/">HERE</a> and clear out the text</p>
                         <br/>
-                        <div class="section-title position-relative mb-6">
-                            <h2>Image Tag Attributes</h2>
-                        </div>
-                        <p>
-                            Below are the attributes of the <code>&lt;img&gt;</code> tag:<br/>
-                            <table border="1">
-                                <tbody>
-                                    <tr>
-                                        <th><strong>&lt;img&gt;</strong> tag attribute&nbsp;&nbsp;</th>
-                                        <th>Purpose&nbsp;</th>
-                                    </tr>
-                                    <tr>
-                                        <td>src</td>
-                                        <td><strong>src</strong> stands	for	<strong>source</strong>. Like a hyperlink, you enter	address	of the image for this	
-                                            attribute. Address is the location where this image has	been stored. It can be a local file or an online link</td>
-                                    </tr>
-                                    <tr>
-                                        <td>alt</td>
-                                        <td><strong>alt</strong> stands for	<strong>alternate text</strong>. This text is shown on the web page if the image	
-                                            cannot be shown due	to some issue. Think of it as a backup plan.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>width</td>
-                                        <td>The	width of the image.	If you	don’t provide this value then it will show	
-                                            the image with its original width.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>height</td>
-                                        <td>The	height of the image. If you	don’t provide this value then it will show	
-                                            the image with its original height.</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                        <h2>Part 2</h2>
+                        <p>Place a horizontal line after the heading and the image using the <code>&lt;hr/&gt;</code> tag. 
+                            Then, make each text tag (<code>&lt;h1&gt;, &lt;li&gt;, &lt;p&gt;, etc.</code>) a different color 
+                            (remember the <code>style="color: color-of-your-choice"</code> attribute)
                         </p>
-                        <div class="section-title position-relative mb-6">
-                            <h2>Example</h2>
-                        </div>
-                        <p>
-                        Below is an example of a webpage containing an image. Go ahead and write this code in the editor    
+                        <br/>
+                        <h2>Part 3</h2>
+                        <p>Now we're going to change the background color of our webpage! To do this, we add the style attribute to the body tag,
+                            and set <strong>background-color</strong> equal to any color we want. It looks something like this: <br/>
+                            <code>&lt;body style="background-color: any-color-you-want;"&gt;</code><br/>
+                            Set your webpage background to anything you want.
                         </p>
-                        <iframe src="https://pastebin.com/embed_iframe/KL9CHhty?theme=dark" style="border:none;width:100%; height:45vh"></iframe>
-                        In order to change the image, set <code>src</code> equal to another image link. Hint: go to google images, find an image, 
-                        right click on it, and select <strong>copy imgage address</strong>. Then, paste that where it says src. Dont forget the quotation marks!<br/><br/>
-                        <img src="img/img-address.png" width="50%" height="50%"><br/><br/>
-                        <div class="section-title position-relative mb-6">
+                        <br/>
+                        <h2>Part 4</h2>
+                        <p>
+                            Turn your image into a link to a website related to the image. So, if you have an imgae of a lego,
+                            turn the image into a link to a legos site.<br/>
+                            Hint: Do this by placing the <code>&lt;img&gt;</code> tag <strong>inside</strong> of the <code>&lt;a&gt;</code> tag like<br/>
+                            <code>&lt;a href="link-to-site"&gt;&lt;img src="link-to-image"/&gt;&lt;/a&gt;</code><br/>
+                            <strong>Note:</strong> To test the image link, download the html first--that way, you can access the link locally rather than from the editor.
+                        </p>
+                        <br/>
+                        <h2>Saving Your Work</h2>
+                        <p>
+                            To save your work, click on the three buttons on the upper right part of the editor window, and then click <strong>Download</strong><br/>
+                            <img src="img/download.png" width="70%" height="70%">
+                            <img src="img/click.png" width="70%" height="70%">
+                        </p>
+                        <br/>
                         <h2>Challenge</h2>
-                        </div>
                         <p>
-                            Find a different image and put that in your webpage. Change the heading to something about the image you select and write a brief
-                            paragraph about the image underneath the image.
+                            Keep playing around with your webpage. Make whatever other changes you want!
                         </p>
 
                     </div>
