--- a/classGame2.html
+++ b/classGame2.html
@@ -177,7 +177,14 @@
           <style>
             body {
                 font-family: Arial, sans-serif;
-                background-color: lightgray;
+                height: 100vh;
+                background: repeating-linear-gradient(
+                    to right,
+                    gray 0px,
+                    gray 20px,
+                    #90CAF9 20px,
+                    #90CAF9 40px
+                );
             }
         
             h1 {
@@ -235,7 +242,14 @@
         <code id="code">
             body {
                 font-family: Arial, sans-serif;
-                background-color: <input type="text" id="lightgray" class="droppable" ondrop="handleDrop(event)" ondragover="handleDragOver(event)" readonly>;
+                height: 100vh;
+                background: repeating-linear-gradient(
+                    to right,
+                    gray 0px,
+                    gray 20px,
+                    blue 20px,
+                    blue 40px
+                );
             }
             h1 {
                 text-align: center;
