--- a/cssGame1.html
+++ b/cssGame1.html
@@ -202,7 +202,7 @@
         <div id="center-value" class="draggable" data-target="center" ondragstart="handleDragStart(event)">center</div>
         <div id="gold-value" class="draggable" data-target="gold" ondragstart="handleDragStart(event)">gold</div>
         <div id="36-value" class="draggable" data-target="h-36" ondragstart="handleDragStart(event)">36px</div>
-        <div id="gray" class="draggable" data-target="gray" ondragstart="handleDragStart(event)">gray</div>
+        <div id="gray-value" class="draggable" data-target="gray" ondragstart="handleDragStart(event)">gray</div>
         <div id="20-value" class="draggable" data-target="p-20" ondragstart="handleDragStart(event)">20px</div>
     </div>
     <a href="cssGame2.html">NEXT</a>
