--- a/cssGame2.html
+++ b/cssGame2.html
@@ -238,9 +238,9 @@
       <div id="lightskyblue-value" class="draggable" data-target="lightskyblue" ondragstart="handleDragStart(event)">lightskyblue</div>
       <div id="44-value" class="draggable" data-target="h-44" ondragstart="handleDragStart(event)">44px</div>
       <div id="28-value" class="draggable" data-target="h-28" ondragstart="handleDragStart(event)">28px</div>
-      <div id="28-value1" class="draggable" data-target="p-20" ondragstart="handleDragStart(event)">20px 0</div>
-      <div id="28-value2" class="draggable" data-target="justify" ondragstart="handleDragStart(event)">28px</div>
-      <div id="m-20-0-value" class="draggable" data-target="p-16" ondragstart="handleDragStart(event)">20px 0</div>
+      <div id="20-value" class="draggable" data-target="p-20" ondragstart="handleDragStart(event)">20px</div>
+      <div id="justify-value" class="draggable" data-target="justify" ondragstart="handleDragStart(event)">justify</div>
+      <div id="16-value" class="draggable" data-target="p-16" ondragstart="handleDragStart(event)">16px</div>
     </div>
     <a href="cssGame3.html">NEXT</a>
 </body>
