--- a/cssGame5.html
+++ b/cssGame5.html
@@ -258,7 +258,7 @@
         <div id="sans-font" class="draggable" data-target="sans" ondragstart="handleDragStart(event)">sans-serif</div>
         <div id="yellow-color" class="draggable" data-target="portion" ondragstart="handleDragStart(event)">portion</div>
         <div id="width-id" class="draggable" data-target="width" ondragstart="handleDragStart(event)">400px</div>
-        <div id="width-id" class="draggable" data-target="section" ondragstart="handleDragStart(event)">section</div>
+        <div id="sec-id" class="draggable" data-target="section" ondragstart="handleDragStart(event)">section</div>
     </div>
 </body>
 </html>
